--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -7,7 +7,7 @@
     tools:context=".StartActivity">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/startActivityAppLogo"
         android:layout_width="333dp"
         android:layout_height="312dp"
         android:layout_marginTop="50dp"
@@ -18,22 +18,22 @@
         app:srcCompat="@drawable/start_background" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/startActivityAppTagline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/start_screen_tagline"
+        android:text="@string/app_tagline"
         android:textSize="24sp"
         android:layout_marginTop="29dp"
         android:fontFamily="@font/yeonsung_regular"
         android:paddingStart="60dp"
         android:paddingEnd="60dp"
         android:gravity="center"
-        app:layout_constraintEnd_toEndOf="@id/imageView2"
-        app:layout_constraintStart_toStartOf="@id/imageView2"
-        app:layout_constraintTop_toBottomOf="@id/imageView2" />
+        app:layout_constraintEnd_toEndOf="@id/startActivityAppLogo"
+        app:layout_constraintStart_toStartOf="@id/startActivityAppLogo"
+        app:layout_constraintTop_toBottomOf="@id/startActivityAppLogo" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/startActivityAppDesigner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/designer"
@@ -47,7 +47,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button"
+        android:id="@+id/startActivityNextButton"
         android:layout_width="157dp"
         android:layout_height="57dp"
         android:text="Next"
@@ -56,8 +56,8 @@
         android:fontFamily="@font/lato_bold"
         android:layout_marginBottom="10dp"
         android:background="@drawable/custom_button"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
-        app:layout_constraintEnd_toEndOf="@+id/textView5"
-        app:layout_constraintStart_toStartOf="@+id/textView5" />
+        app:layout_constraintBottom_toTopOf="@+id/startActivityAppDesigner"
+        app:layout_constraintEnd_toEndOf="@+id/startActivityAppDesigner"
+        app:layout_constraintStart_toStartOf="@+id/startActivityAppDesigner" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
