--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,37 +9,40 @@
         android:id="@+id/homeFragmentImageScrollList"
         android:layout_width="0dp"
         android:layout_height="180dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:paddingStart="80dp"
         android:paddingEnd="80dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="80dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
-        android:fontFamily="@font/yeonsung_regular"
+        android:id="@+id/homeFragmentTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:fontFamily="@font/yatraone_regular"
         android:gravity="center"
         android:text="Popular"
-        android:textSize="20sp"
+        android:textSize="25sp"
+
+        app:layout_constraintBottom_toBottomOf="@+id/homeFragmentViewMenu"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/homeFragmentImageScrollList" />
+        app:layout_constraintTop_toTopOf="@+id/homeFragmentViewMenu" />
 
     <TextView
         android:id="@+id/homeFragmentViewMenu"
-        android:layout_width="80dp"
-        android:layout_height="25dp"
+        android:layout_width="110dp"
+        android:layout_height="32dp"
         android:gravity="center"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
         android:clickable="true"
         android:background="@drawable/custom_editview"
         android:text="View Menu"
-        android:textSize="12sp"
+        android:textSize="16sp"
         android:textColor="@color/ascent_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/homeFragmentImageScrollList" />
@@ -49,14 +52,13 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:foregroundGravity="center"
-        android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/homeFragmentTitle" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
