--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -91,6 +91,7 @@
                 android:background="@drawable/custom_button"
                 android:fontFamily="@font/lato_bold"
                 android:gravity="center"
+                android:textAllCaps="false"
                 android:text="Buy\nAgain"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -104,7 +105,7 @@
         android:id="@+id/historyFragmentPreviousBuy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Previous buy"
+        android:text="Previous Buy"
         android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
         android:textSize="20sp"
