--- a/app/src/main/res/layout/history_item_layout.xml
+++ b/app/src/main/res/layout/history_item_layout.xml
@@ -80,6 +80,7 @@
                 android:textColor="@color/white"
                 android:fontFamily="@font/lato_bold"
                 android:gravity="center"
+                android:textAllCaps="false"
                 android:layout_marginEnd="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
